--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,18 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <junit.version>4.13</junit.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
 
     <build>
         <plugins>
